--- a/README.me
+++ b/README.me
@@ -1,2 +1,2 @@
 Get all your grades to be showed in a graph
-![Graph](https://i.imgur.com/RYx2YzD.png)
+<img src="https://i.imgur.com/RYx2YzD.png" alt="Alt text" title="Optional title">
